# conda-pypi-channel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/conda_pypi_channel/: convert.py  plugin.py  repodata.py  server.py
